# bvrs

./: .editorconfig  .gitignore  .rustfmt.toml  Cargo.toml  README.md  example.txt  example1.txt  example_sparse_array.txt
benches/: main.rs  sparse_array.rs  sparse_array_generation.rs
benches/rank_support/: dummy_rank.rs  generation.rs  mod.rs  overhead.rs  rank.rs  utilities.rs
benches/select_support/: mod.rs  select.rs  utilities.rs
benches/sparse_array/: generation.rs  index.rs  mod.rs  overhead.rs  rank.rs  utilities.rs
report/Source/: main.tex
src/: benchmarks.rs  bit_vec.rs  lib.rs  main.rs  rank_support.rs  select_support.rs  sparse_array.rs
