[package]
name = "p1_858"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = { version = "0.8" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "main"
harness = false
