[package]
name = "bvrs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A lightweight rust library for BitVector Rank&Select operations, coupled with a generic Sparse Array implementation."
[dependencies]
rand = { version = "0.8" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "main"
harness = false
